# godot-cpp

./: .gitattributes  CMakeLists.txt  LICENSE.md  README.md  binding_generator.py  godot_jolt.py
cmake/: GodotCppConfigurations.cmake  GodotCppGenerateCode.cmake  GodotCppOptions.cmake  GodotCppPrelude.cmake  GodotCppSetup.cmake  GodotCppUtilities.cmake
src/: godot.cpp
